Fixed click bug on mobile devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,3 +5,5 @@
 #temperature-slider {
     margin-bottom: 2rem;
 }
+
+.input-field label { pointer-events: all; }
